Improvement to the Add-ins engine

--- a/Tangra.OccultTools/frmConfig.resx
+++ b/Tangra.OccultTools/frmConfig.resx
@@ -120,4 +120,22 @@
   <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAQAAAABADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAwMDAAICAgAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
+        AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC7u7u7AAAAAAAAAAAAAAC7u7u7uIgAAAAAAAAA
+        AAALu7u7uIiIgAAAAAAAAAAAu7u7u4iIiIgAAAAAAAAAC7u7u7iIiIiIgAAAAAAAALu7u7u4iIiIiIgA
+        AAAAAAC7u7u7iIiIiIiIAAAAAAALu7u7u4iIiIiIiIAAAAAAC7u7u7iIiIiIiIiAAAAAAAu7u7u4iIiI
+        iIiIgAAAAAALu7u7uIiIiIiIiIAAAAAAC7u7u7iIiIiIiIiAAAAAAAu7u7u4iIiIiIiIgAAAAAALu7u7
+        uIiIiIiIiIAAAAAAC7u7u7uIiIiIiIiAAAAAAAC7u7u7iIiIiIiI/wAAAAAAu7u7u7iIiIiIiP/wAAAA
+        AAu7u7u4iIiIiI//8AAAAAAAu7u7u4iIiIgP//AAAAAAAAu7u7u4iIiAAP8AAAAAAAAAu7u7u7iIAAAA
+        AAAAAAAAAAC7u7u7AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
