Completed the AdjustApertures functionality.

--- a/Tangra 3/VideoOperations/LightCurves/AdjustApertures/frmAdjustApertures.resx
+++ b/Tangra 3/VideoOperations/LightCurves/AdjustApertures/frmAdjustApertures.resx
@@ -118,8 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label2.Text" xml:space="preserve">
-    <value>    This screen allows you to adjust in bulk the apertures of all objects that have been added so far for measurement. If you add new objects you will need to open this form and do the adjustments again.</value>
+    <value>    This screen allows you to adjust in bulk the apertures of all objects that have been added so far for measurement. If you make changes to the objects you will need to open this form again and redo the adjustments.</value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
