--- a/Tangra 3/Properties/Resources.resx
+++ b/Tangra 3/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="RotateEnabledCursor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Cursor_191.cur;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="spectra_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\spectra_logo.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
