Fixed a problem where the very first measurement of the first frame is not used and this can create a bias for fast movers when only 1 or 2 frames per integration period are measured.

--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -5,6 +5,7 @@ Unreleased
 -------------------
 - Added release notes.
 - Implemented support for ADV format version 2.
+- Fixed a bias in flyby astrometry happening when measuring only 1 or 2 frames per integration interval.
 
 v3.5.8 (2016-07-01)
 -------------------
