--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -6,6 +6,7 @@ Unreleased
 - Added release notes.
 - Implemented support for ADV format version 2.
 - Fixed a bias in flyby astrometry happening when measuring only 1 or 2 frames per integration interval.
+- Observed object name recorded in AAV/ADV files is now displayed on the screen.
 
 v3.5.8 (2016-07-01)
 -------------------
