Completed the video to FITS export. Added FITS Header Cards details form.

--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -10,6 +10,7 @@ v3.6.0 Unreleased
 - Support for working with FITS sequences with non-standard headers for timestamp and exposure.
 - Improvements to default dynamic range selection when working with FITS files.
 - Implemented export of videos, incuding AAV/ADV, to a FITS sequence.
+- Added frame details form to show the FITS header cards of the current frame when working with a FITS sequence.
 
 v3.5.8 (2016-07-01)
 -------------------
