--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,6 +1,10 @@
 ﻿Tangra3 Release Notes
 ---------------------
 
+v3.6.1 (UNRELEASED)
+-------------------
+- Made it possible to fix interlaced video field grabbing issues by swaping of shifting the video fields inside video frames.
+
 v3.6.0 (2016-10-11)
 -------------------
 - Added release notes.
