--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -4,6 +4,7 @@
 v3.6.1 (UNRELEASED)
 -------------------
 - Made it possible to fix interlaced video field grabbing issues by swaping of shifting the video fields inside video frames.
+- IOTA-VTI timestamps can now also be read (OCR-ed) when doing astrometry.
 
 v3.6.0 (2016-10-11)
 -------------------
